--- a/src/app/component/skills-section/skills-section.component.html
+++ b/src/app/component/skills-section/skills-section.component.html
@@ -55,8 +55,8 @@
                 Scrum
             </div>
             <div class="skill">
-                <img src="../../../assets/images/loopback-icon-svgrepo-com.svg">
-                Loopback
+                <img src="../../../assets/images/django.png">
+                Django
             </div>
         </div>
     </div>
