--- a/src/app/component/contact-section/contact-section.component.scss
+++ b/src/app/component/contact-section/contact-section.component.scss
@@ -27,7 +27,7 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    form {
+    .form-content {
       width: 95%;
       max-width: 600px;
       display: flex;
@@ -38,54 +38,88 @@
       box-shadow: rgba(23, 92, 230, 0.15) 0px 4px 24px;
       margin-top: 28px;
       gap: 12px;
-      input {
-        flex: 1 1 0%;
-        background-color: transparent;
-        border: 1px solid rgb(177, 178, 179);
-        outline: none;
-        font-size: 18px;
-        color: rgb(242, 243, 244);
-        border-radius: 12px;
-        padding: 12px 16px;
-        &:focus {
-          border: 1px solid rgb(133, 76, 230);
-        }
-      }
-      textarea {
-        flex: 1;
-        background-color: transparent;
-        border: 1px solid rgb(177, 178, 179);
-        outline: none;
-        font-size: 18px;
-        color: rgb(242, 243, 244);
-        border-radius: 12px;
-        padding: 12px 16px;
-        resize: none;
-        &:focus {
-          border: 1px solid rgb(133, 76, 230);
-        }
-      }
-    }
-    .form-btn {
-      width: 100%;
-      text-decoration: none;
       text-align: center;
-      background: -webkit-linear-gradient(
-        225deg,
-        rgb(132, 0, 255) 0%,
-        rgb(230, 0, 255) 100%
-      );
-      padding: 13px 16px;
-      margin-top: 2px;
-      border-radius: 12px;
-      border: medium none;
-      color: rgb(242, 243, 244);
-      font-size: 18px;
-      font-weight: 600;
-      &:hover {
-        box-shadow: rgba(23, 92, 230, 0.15) 0px 4px 24px;
+      .email {
+        text-decoration: none;
+        border: medium none;
+        color: rgb(230, 0, 255);
+        font-size: 18px;
+        font-weight: 600;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+      .phone {
+        text-decoration: none;
+        border: medium none;
+        color: rgb(132, 0, 255);
+        font-size: 18px;
+        font-weight: 600;
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
+    // form {
+    //   width: 95%;
+    //   max-width: 600px;
+    //   display: flex;
+    //   flex-direction: column;
+    //   background-color: rgb(23, 23, 33);
+    //   padding: 32px;
+    //   border-radius: 16px;
+    //   box-shadow: rgba(23, 92, 230, 0.15) 0px 4px 24px;
+    //   margin-top: 28px;
+    //   gap: 12px;
+     
+    //   input {
+    //     flex: 1 1 0%;
+    //     background-color: transparent;
+    //     border: 1px solid rgb(177, 178, 179);
+    //     outline: none;
+    //     font-size: 18px;
+    //     color: rgb(242, 243, 244);
+    //     border-radius: 12px;
+    //     padding: 12px 16px;
+    //     &:focus {
+    //       border: 1px solid rgb(133, 76, 230);
+    //     }
+    //   }
+    //   textarea {
+    //     flex: 1;
+    //     background-color: transparent;
+    //     border: 1px solid rgb(177, 178, 179);
+    //     outline: none;
+    //     font-size: 18px;
+    //     color: rgb(242, 243, 244);
+    //     border-radius: 12px;
+    //     padding: 12px 16px;
+    //     resize: none;
+    //     &:focus {
+    //       border: 1px solid rgb(133, 76, 230);
+    //     }
+    //   }
+    // }
+    // .form-btn {
+    //   width: 100%;
+    //   text-decoration: none;
+    //   text-align: center;
+    //   background: -webkit-linear-gradient(
+    //     225deg,
+    //     rgb(132, 0, 255) 0%,
+    //     rgb(230, 0, 255) 100%
+    //   );
+    //   padding: 13px 16px;
+    //   margin-top: 2px;
+    //   border-radius: 12px;
+    //   border: medium none;
+    //   color: rgb(242, 243, 244);
+    //   font-size: 18px;
+    //   font-weight: 600;
+    //   &:hover {
+    //     box-shadow: rgba(23, 92, 230, 0.15) 0px 4px 24px;
+    //   }
+    // }
   }
 }
 
